# Multi-Agent_RL_Civilization

./: .gitignore  README.md  pyproject.toml
docs/research/: CivilizationV7_README.docx
notebooks/: RL_Civilization.ipynb
scripts/: run_simulation.py
src/civilization/: __init__.py  __main__.py  simulation.py
src/civilization/core/: __init__.py  config.py  entities.py
src/civilization/env/: __init__.py  world.py
src/civilization/rl/: __init__.py  models.py  policy.py
src/civilization/train/: __init__.py  runner.py
src/civilization/viz/: __init__.py  renderer.py
