[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-rl-civilization"
version = "0.1.0"
description = "Multi-agent reinforcement learning civilization simulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
  "matplotlib",
]

[project.scripts]
civ-sim = "civilization:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
